--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Nuevas
+    //RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
-
+    //corrutinas
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    //lifecycle
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     //Fin Nuevas
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
